dev/ilant/manifests/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ilant-gateway
  namespace: ilant
spec:
  selector:
    app: istio-ingress
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTP
    hosts:
    - "ilant.sandcastle.work"
    tls:
      httpsRedirect: false  
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "ilant.sandcastle.work"
    tls:
      httpsRedirect: true
